--- a/aks-oms-backend-test.yml
+++ b/aks-oms-backend-test.yml
@@ -15,7 +15,7 @@ spec:
         app: oms-backend
     spec:
       containers:
-        - image: eorepo.azurecr.io/oms-backend:test-latest
+        - image: eorepo.azurecr.io/eo-oms-backend:test-latest
           name: oms-backend
           imagePullPolicy: Always
           ports:
