--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,13 +1,16 @@
-server:
-  port: 9011
-  servlet:
-    context-path: /projectName
-
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/projectName?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowMultiQueries=true
-    username: root
-    password: root
+    dynamic:
+      primary: oms
+      datasource:
+        oms:
+          url: jdbc:mysql://eo-prod-db.mysql.database.azure.com:3306/oms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowMultiQueries=true&allowPublicKeyRetrieval=true
+          username: ntdbuser
+          password: Init6666
+        tms:
+          url: jdbc:mysql://eo-prod-db.mysql.database.azure.com:3306/timesheet-service?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowMultiQueries=true&allowPublicKeyRetrieval=true
+          username: ntdbuser
+          password: Init6666
   redis:
     database: 0
     host: 127.0.0.1
@@ -17,8 +20,6 @@ spring:
 logging:
   level:
     #打印执行的SQL语句
-    com.inossem.nt.collaboration: debug
+    com.inossem: debug
   file:
     name: ./logs/spring.log
-
-
