fix: chang db url

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
           username: ntdbuser
           password: Init6666
         tms:
-          url: jdbc:mysql://eo-test.inossemcanada.com:3306/timesheet-service?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowMultiQueries=true&allowPublicKeyRetrieval=true
+          url: jdbc:mysql://dc-test.inossemcanada.com:3306/timesheet-service?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowMultiQueries=true&allowPublicKeyRetrieval=true
           username: ntdbuser
           password: Init6666
   redis:
