--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,8 @@
 useInnerInterfaceCall: false
+KYC:
+  baseUrl: https://kyc.inossemtimes.com/api-v2
+  functions:
+    validSubs: /subscription/validSubs
 server:
   port: 9011
   servlet:
