Feat: company refactor

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 useInnerInterfaceCall: false
+KYC:
+  functions:
+    validSubs: /subscription/validSubs
+    getCompanyInfoByCode: /mainData/getOneByCode
 server:
   port: 9011
   servlet:
